fix safari css flicker

--- a/src/styles.css
+++ b/src/styles.css
@@ -96,3 +96,6 @@ button {
   font-size: 30px;
   margin: 15px
 }
+.stop-flickering {
+  -webkit-transform:translate3d(0,0,0);
+}
